--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "react-yarn-berry-monorepo",
+  "version": "0.0.1",
+  "author": "chlee1001 <chlee1001@naver.com>",
+  "license": "MIT",
   "private": true,
   "workspaces": {
     "packages": [
